Fix shifting of contents to left when a modal window is opened.

--- a/src/main/resources/lemming/ui/page/styles/global.css
+++ b/src/main/resources/lemming/ui/page/styles/global.css
@@ -173,7 +173,8 @@ h1, h2, h3, h4, h5, h6, h7 {
 }
 
 .modal-open {
-  overflow-y: scroll;
+  overflow-y: auto;
+  padding-right: 0 !important;
 }
 
 .modal-dialog {
